[workspace]

members = [
    "algebra-core",
    "algebra",
    "algebra-benches",
    "bench-utils",
    "cp-benches",
    "crypto-primitives",
    "dpc",
    "ff-fft",
    "gm17",
    "groth16",
    "r1cs-core",
    "r1cs-core-new",
    "r1cs-std",
    "r1cs-std-new",
    "algebra-core/algebra-core-derive",
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
